# mcp-code-execution

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: swaggers.yaml
examples/: demo.py
sandbox/: Dockerfile  entrypoint.py  requirements.txt
src/mce/: __init__.py  __main__.py  config.py  errors.py  server.py
src/mce/compiler/: codegen.py  llm_enhancer.py  orchestrator.py  swagger_parser.py  top_level_codegen.py
src/mce/compiler/templates/: function.py.j2  (+1 more)
src/mce/models/: __init__.py
src/mce/runtime/: cache.py  executor.py  registry.py
src/mce/security/: ast_guard.py  policies.py  vault.py
src/mce/utils/: logging.py
src/mfp/: __init__.py  __main__.py  config.py  errors.py  server.py
src/mfp/compiler/: codegen.py  llm_enhancer.py  orchestrator.py  swagger_parser.py
src/mfp/models/: __init__.py
src/mfp/runtime/: cache.py  executor.py  registry.py
src/mfp/security/: ast_guard.py  policies.py  vault.py
src/mfp/utils/: hashing.py  logging.py
tests/: conftest.py
tests/fixtures/: hotel_api.yaml  petstore.yaml  weather_api.yaml
tests/integration/: test_compiler.py
tests/unit/: test_ast_guard.py  test_cache.py  test_codegen.py  test_errors.py  test_executor.py  test_llm_enhancer.py  test_main.py  test_models_auth.py  test_orchestrator.py  test_registry.py  test_security.py  test_server.py  test_swagger_parser.py  test_top_level_codegen.py  test_utils.py
wiki/: Compiler-Pipeline.md  Configuration-Reference.md  Contributing.md  Getting-Started.md  Home.md  MCP-Tools-Reference.md  SIMD-Pattern.md  Security-Model.md
(+1 files in other folders)
